@@ -14,6 +14,7 @@ flumotion/component/component.py
 flumotion/component/feedcomponent.py
 
 flumotion/component/base/admin_gtk.py
+flumotion/component/base/feeders.glade
 
 flumotion/component/consumers/httpstreamer/http.py
 flumotion/component/consumers/httpstreamer/http.glade
